--- a/.github/workflows/azure-dev.yaml
+++ b/.github/workflows/azure-dev.yaml
@@ -32,8 +32,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Python requirements
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          python3 -m pip install -r requirements-dev.txt
       - name: Log in with Azure (Federated Credentials)
         if: ${{ env.AZURE_CLIENT_ID != '' }}
         run: |
